--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -573,3 +573,55 @@ month={July}
   year={2006},
   organization={IEEE}
 }
+
+@online{pyqt5,
+  author = {PSF},
+  title = {PyQt5},
+  year = 2018,
+  url = {https://pypi.python.org/pypi/PyQt5},
+  urldate = {2018-03-14}
+}
+
+@online{scikit,
+  author = {PSF},
+  title = {Scikit-learn},
+  url={https://pypi.python.org/pypi/scikit-learn/0.19.1},
+  urldate={2018-03-14},
+  year={2018}
+}
+
+@online{pandas,
+  author = {PSF},
+  title = {Pandas},
+  url={https://pypi.python.org/pypi/pandas},
+  urldate={2018-03-14},
+  year={2018}
+}
+
+@online{matplotlib,
+  author = {PSF},
+  title={Matplotlib},
+  url={https://pypi.python.org/pypi/matplotlib},
+  urldate={2018-03-14},
+  year={2018}
+}
+
+@inproceedings{moustafa2015unsw,
+  title={UNSW-NB15: a comprehensive data set for network intrusion detection systems (UNSW-NB15 network data set)},
+  author={Moustafa, Nour and Slay, Jill},
+  booktitle={Military Communications and Information Systems Conference (MilCIS), 2015},
+  pages={1--6},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{moustafa2016evaluation,
+  title={The evaluation of Network Anomaly Detection Systems: Statistical analysis of the UNSW-NB15 data set and the comparison with the KDD99 data set},
+  author={Moustafa, Nour and Slay, Jill},
+  journal={Information Security Journal: A Global Perspective},
+  volume={25},
+  number={1-3},
+  pages={18--31},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
