--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -582,30 +582,6 @@ month={July}
   urldate = {2018-03-14}
 }
 
-@online{scikit,
-  author = {PSF},
-  title = {Scikit-learn},
-  url={https://pypi.python.org/pypi/scikit-learn/0.19.1},
-  urldate={2018-03-14},
-  year={2018}
-}
-
-@online{pandas,
-  author = {PSF},
-  title = {Pandas},
-  url={https://pypi.python.org/pypi/pandas},
-  urldate={2018-03-14},
-  year={2018}
-}
-
-@online{matplotlib,
-  author = {PSF},
-  title={Matplotlib},
-  url={https://pypi.python.org/pypi/matplotlib},
-  urldate={2018-03-14},
-  year={2018}
-}
-
 @inproceedings{moustafa2015unsw,
   title={UNSW-NB15: a comprehensive data set for network intrusion detection systems (UNSW-NB15 network data set)},
   author={Moustafa, Nour and Slay, Jill},
@@ -624,4 +600,39 @@ month={July}
   pages={18--31},
   year={2016},
   publisher={Taylor \& Francis}
+}
+
+@Article{matplotlib,
+  Author    = {Hunter, J. D.},
+  Title     = {Matplotlib: A 2D graphics environment},
+  Journal   = {Computing In Science \& Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {90--95},
+  abstract  = {Matplotlib is a 2D graphics package used for Python
+  for application development, interactive scripting, and
+  publication-quality image generation across user
+  interfaces and operating systems.},
+  publisher = {IEEE COMPUTER SOC},
+  doi       = {10.1109/MCSE.2007.55},
+  year      = 2007
+}
+
+@InProceedings{pandas,
+  author    = { Wes McKinney },
+  title     = { Data Structures for Statistical Computing in Python },
+  booktitle = { Proceedings of the 9th Python in Science Conference },
+  pages     = { 51 - 56 },
+  year      = { 2010 },
+  editor    = { St\'efan van der Walt and Jarrod Millman }
+}
+
+@article{scikit,
+  title={Scikit-learn: Machine learning in Python},
+  author={Pedregosa, Fabian and Varoquaux, Ga{\"e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and others},
+  journal={Journal of machine learning research},
+  volume={12},
+  number={Oct},
+  pages={2825--2830},
+  year={2011}
 }
