--- a/report/tables/unswdescription.tex
+++ b/report/tables/unswdescription.tex
@@ -1,7 +1,7 @@
 % Please add the following required packages to your document preamble:
 % \usepackage{booktabs}
 \begin{longtable}{@{}p{0.22\textwidth}p{0.1\textwidth}p{0.63\textwidth}@{}}
-\caption{UNSW-NB15 Fields}\\
+\caption{UNSW-NB15 Features}\\
 \label{unswfieldstable}\\
 \toprule
 Field & Type & Description \\ \midrule
